Fix the conditions when fullscreen detector listeners are registered

Previously, we rely on the DOMNode[Inserted/Removed]IntoDocument events
to attach/detach the detector. However this won't work if the video
element is created from the parsing process. This CL fixes the issue by
overriding insertedInto() and removedFrom() callbacks, which always
works regardless of how the video element is inserted into the document.

BUG=703210

Review-Url: https://codereview.chromium.org/2758233003
Cr-Commit-Position: refs/heads/master@{#458147}

Former-commit-id: d9d39e2308b617bad51c86f9703828a2fbef95d8